app/src/test/resources/autoexpect/syntax/parse/LexerTest/parseFail/9.expected.txt
error: unterminated string subst
  --> test:1:3
1 |  "{:" 
      ~~~~
